force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Child_Care_District__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_District__c</fullName>
    <label>Child Care District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>