force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Children_to_Place__c.field-meta.xml
<CustomField>
    <fullName>Children_to_Place__c</fullName>
    <label># Children to Place</label>
    <summaryForeignKey>vlocity_ps__ProgramEnrollmentMember__c.vlocity_ps__ProgramEnrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>