force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Copay_Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Copay_Full_Day__c</fullName>
    <description>Used in Child Care to determine copay for parents for Child Care</description>
    <label>Copay Full Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>