force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Copay_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Copay_Half_Day__c</fullName>
    <description>Used in Child Care for copays parents pay for half days of Child Care</description>
    <label>Copay Half Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>