force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/FamilySize_ChildCare__c.field-meta.xml
<CustomField>
    <fullName>FamilySize_ChildCare__c</fullName>
    <description>Used in Child care.  It&apos;s the size of the family used for calculating benefits and copays</description>
    <label>FamilySize ChildCare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>