force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Income_Reported__c.field-meta.xml
<CustomField>
    <fullName>Income_Reported__c</fullName>
    <description>Record how much income was recorded when the application was submitted for Child Care</description>
    <label>Income Reported</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>