force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>of_Dependents__c</fullName>
    <description>Child Care used to show how many dependents</description>
    <label># of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>