force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Preferred_Provider__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>