force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <description>Used in Child Care to prioritize Program Enrollments on waitlist</description>
    <label>Program Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>