force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__ActiveDeterminationAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ActiveDeterminationAmount__c</fullName>
    <label>Determination Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>