force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__DateofLastNoticeofRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateofLastNoticeofRedetermination__c</fullName>
    <label>Date of Last Notice of Redetermination</label>
    <type>Date</type>
</CustomField>