force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__DaysSinceNoticeofRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysSinceNoticeofRedetermination__c</fullName>
    <formula>TODAY() -  vlocity_ps__DateofLastNoticeofRedetermination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Notice of Redetermination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>