force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__DaysUntilScheduledRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DaysUntilScheduledRedetermination__c</fullName>
    <label>Days until Scheduled Redetermination</label>
    <type>Date</type>
</CustomField>