force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__IsRemoved__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>