force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__JSONAttribute__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__JSONAttribute__c</fullName>
    <label>JSON Attribute</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>