force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__MostRecentDeterminationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MostRecentDeterminationDate__c</fullName>
    <label>Most Recent Determination Date</label>
    <summarizedField>vlocity_ps__ProgramEnrollmentDetermination__c.CreatedDate</summarizedField>
    <summaryForeignKey>vlocity_ps__ProgramEnrollmentDetermination__c.vlocity_ps__ProgramEnrollmentId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>