force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__NoticesofRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NoticesofRedetermination__c</fullName>
    <label>Notices of Redetermination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>