force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__NumberOfRefusals__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NumberOfRefusals__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Refusals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>