force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__PrimaryApplicantName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryApplicantName__c</fullName>
    <formula>vlocity_ps__PrimaryContactId__r.vlocity_ps__PartyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>