force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment</relationshipLabel>
    <relationshipName>Program_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>