force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramCode__c</fullName>
    <label>Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>