force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__ProgramType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramType__c</fullName>
    <formula>TEXT(vlocity_ps__ProgramId__r.vlocity_ps__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>