force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__Stage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Safety Assessment</fullName>
            </value>
            <value>
                <fullName>Assessment Complete</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Awaiting Placement</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Aged Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>