force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/fields/vlocity_ps__WaitlistSortDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__WaitlistSortDate__c</fullName>
    <label>Waitlist Sort Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>