force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/recordTypes/Child_Care.recordType-meta.xml
<RecordType>
    <fullName>Child_Care</fullName>
    <active>true</active>
    <description>Used for tracking Child Care Program Enrollments</description>
    <label>Child Care</label>
</RecordType>