force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/recordTypes/Covid_Placements.recordType-meta.xml
<RecordType>
    <fullName>Covid_Placements</fullName>
    <active>true</active>
    <label>Covid Placements</label>
</RecordType>