force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/recordTypes/Foster_Care_Children_Placement.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care_Children_Placement</fullName>
    <active>true</active>
    <description>Used to track the enrollment of children in the foster care program.</description>
    <label>Foster Care Children Placement</label>
</RecordType>