force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/recordTypes/Foster_Care_Parent_Recruitment.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care_Parent_Recruitment</fullName>
    <active>true</active>
    <label>Foster Care Parent Recruitment</label>
</RecordType>