force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/validationRules/vlocity_ps__WaitlistRemovedReasonNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__WaitlistRemovedReasonNotNull</fullName>
    <active>true</active>
    <errorConditionFormula>IF( vlocity_ps__IsRemoved__c == true &amp;&amp; ISBLANK( vlocity_ps__ReasonForRemoval__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>vlocity_ps__ReasonForRemoval__c</errorDisplayField>
    <errorMessage>Please select reason/s for removal</errorMessage>
</ValidationRule>