force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/listViews/Child_Care_Program_Enrollments.listView-meta.xml
<ListView>
    <fullName>Child_Care_Program_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__PrimaryApplicantName__c</columns>
    <columns>vlocity_ps__Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>vlocity_ps__ProgramEnrollment__c.Child_Care</value>
    </filters>
    <label>Child Care Program Enrollments</label>
</ListView>