force-app/main/default/objects/vlocity_ps__ProgramEnrollment__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ps__PrimaryContactId__c</columns>
    <columns>vlocity_ps__Stage__c</columns>
    <columns>vlocity_ps__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>vlocity_ps__ProgramEnrollment__c.Foster_Care_Children_Placement</value>
    </filters>
    <filters>
        <field>vlocity_ps__PrimaryContactId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Foster Parent Interest</label>
</ListView>